{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 241,
  "lineage": "669609c4-a72b-4576-f6db-275fd215684b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "shyun_eip_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db4a0608a02a7e9c",
            "association_id": "eipassoc-0a1596657ec7f0d77",
            "domain": "vpc",
            "id": "eipalloc-0db4a0608a02a7e9c",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0f0cbee92374284f6",
            "private_dns": "ip-10-0-0-172.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.172",
            "public_dns": "ec2-3-36-9-15.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.9.15",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "shyun_weba_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ddb428f5b080a627",
            "association_id": "eipassoc-073100461d5e4f7a8",
            "domain": "vpc",
            "id": "eipalloc-0ddb428f5b080a627",
            "instance": "i-0b5f94e2c5c34bda2",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0ce2d1934536ffd75",
            "private_dns": "ip-10-0-0-49.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.49",
            "public_dns": "ec2-52-78-179-148.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.179.148",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.shyun_weba",
            "aws_internet_gateway.shyun_ig",
            "aws_security_group.shyun_sg",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "shyun_weba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e8dfc09b22389ad",
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:instance/i-0b5f94e2c5c34bda2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b5f94e2c5c34bda2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "shyun2-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce2d1934536ffd75",
            "private_dns": "ip-10-0-0-49.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.49",
            "public_ip": "52.78.179.148",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bd6a6a52c67f4953",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fdbbdb56750c2657",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0602098eb9983b994"
            ]
          },
          "dependencies": [
            "aws_security_group.shyun_sg",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "shyun_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:internet-gateway/igw-01081b22ccc9068c6",
            "id": "igw-01081b22ccc9068c6",
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-ig"
            },
            "tags_all": {
              "Name": "shyun-ig"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "shyun_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:loadbalancer/app/shyun-alb/757e620b709d0e6f",
            "arn_suffix": "app/shyun-alb/757e620b709d0e6f",
            "dns_name": "shyun-alb-2141016058.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:loadbalancer/app/shyun-alb/757e620b709d0e6f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "shyun-alb",
            "security_groups": [
              "sg-0602098eb9983b994"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0938f9e1176671f6e"
              },
              {
                "subnet_id": "subnet-0fdbbdb56750c2657"
              }
            ],
            "subnets": [
              "subnet-0938f9e1176671f6e",
              "subnet-0fdbbdb56750c2657"
            ],
            "tags": {
              "Name": "shyun-alb"
            },
            "tags_all": {
              "Name": "shyun-alb"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_subnet.shyun_pubc",
            "aws_vpc.shyun_vpc",
            "aws_security_group.shyun_sg",
            "aws_subnet.shyun_puba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "shyun_albli",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:listener/app/shyun-alb/757e620b709d0e6f/a3675f6ec102d610",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:targetgroup/shyun-albtg/e13790dce473103c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:listener/app/shyun-alb/757e620b709d0e6f/a3675f6ec102d610",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:loadbalancer/app/shyun-alb/757e620b709d0e6f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.shyun_alb",
            "aws_lb_target_group.shyun_albtg",
            "aws_security_group.shyun_sg",
            "aws_subnet.shyun_puba",
            "aws_subnet.shyun_pubc",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "shyun_albtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:targetgroup/shyun-albtg/e13790dce473103c",
            "arn_suffix": "targetgroup/shyun-albtg/e13790dce473103c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 5,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:targetgroup/shyun-albtg/e13790dce473103c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "shyun-albtg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "shyun_tgatt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:targetgroup/shyun-albtg/e13790dce473103c-20211112071909932200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:733118693004:targetgroup/shyun-albtg/e13790dce473103c",
            "target_id": "i-0b5f94e2c5c34bda2"
          },
          "dependencies": [
            "aws_lb_target_group.shyun_albtg",
            "aws_security_group.shyun_sg",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc",
            "aws_instance.shyun_weba"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "shyun_ng",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0db4a0608a02a7e9c",
            "connectivity_type": "public",
            "id": "nat-0120a015fd68bdbbc",
            "network_interface_id": "eni-0f0cbee92374284f6",
            "private_ip": "10.0.0.172",
            "public_ip": "3.36.9.15",
            "subnet_id": "subnet-0fdbbdb56750c2657",
            "tags": {
              "Name": "shyun-ng"
            },
            "tags_all": {
              "Name": "shyun-ng"
            }
          },
          "dependencies": [
            "aws_eip.shyun_eip_ng",
            "aws_internet_gateway.shyun_ig",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shyun_ngrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:route-table/rtb-0aebfd5ba827497bd",
            "id": "rtb-0aebfd5ba827497bd",
            "owner_id": "733118693004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0120a015fd68bdbbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shyun-ngrt"
            },
            "tags_all": {
              "Name": "shyun-ngrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.shyun_ng",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "shyun_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:route-table/rtb-007248808247b31d8",
            "id": "rtb-007248808247b31d8",
            "owner_id": "733118693004",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01081b22ccc9068c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "shyun-rt"
            },
            "tags_all": {
              "Name": "shyun-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.shyun_ig",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shyun_ngas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce946ebe3e52daf5",
            "route_table_id": "rtb-0aebfd5ba827497bd",
            "subnet_id": "subnet-040893cf0c31de6a9"
          },
          "dependencies": [
            "aws_nat_gateway.shyun_ng",
            "aws_route_table.shyun_ngrt",
            "aws_subnet.shyun_pria",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc",
            "aws_eip.shyun_eip_ng",
            "aws_internet_gateway.shyun_ig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shyun_ngas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2af4d098fd3da5",
            "route_table_id": "rtb-0aebfd5ba827497bd",
            "subnet_id": "subnet-071f5cb33a5a53139"
          },
          "dependencies": [
            "aws_eip.shyun_eip_ng",
            "aws_internet_gateway.shyun_ig",
            "aws_nat_gateway.shyun_ng",
            "aws_route_table.shyun_ngrt",
            "aws_subnet.shyun_pric",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shyun_rtas_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d9922a6da2d520a",
            "route_table_id": "rtb-007248808247b31d8",
            "subnet_id": "subnet-0fdbbdb56750c2657"
          },
          "dependencies": [
            "aws_internet_gateway.shyun_ig",
            "aws_route_table.shyun_rt",
            "aws_subnet.shyun_puba",
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "shyun_rtas_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f96122add8663b12",
            "route_table_id": "rtb-007248808247b31d8",
            "subnet_id": "subnet-0938f9e1176671f6e"
          },
          "dependencies": [
            "aws_subnet.shyun_pubc",
            "aws_vpc.shyun_vpc",
            "aws_internet_gateway.shyun_ig",
            "aws_route_table.shyun_rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "shyun_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:security-group/sg-0602098eb9983b994",
            "description": "Allow HTTP,SSH,SQL,ICMP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0602098eb9983b994",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ICMP",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow Basic",
            "name_prefix": "",
            "owner_id": "733118693004",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "shyun_sg"
            },
            "tags_all": {
              "Name": "shyun_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_pria",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-040893cf0c31de6a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-040893cf0c31de6a9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-pria"
            },
            "tags_all": {
              "Name": "shyun-pria"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_pric",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-071f5cb33a5a53139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-071f5cb33a5a53139",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-pric"
            },
            "tags_all": {
              "Name": "shyun-pric"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_pridba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-03c75d95d5e9417aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-03c75d95d5e9417aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-pridba"
            },
            "tags_all": {
              "Name": "shyun-pridba"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_pridbc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-0d9bdbeb66a0e52ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d9bdbeb66a0e52ec",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-pridbc"
            },
            "tags_all": {
              "Name": "shyun-pridbc"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_puba",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-0fdbbdb56750c2657",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0fdbbdb56750c2657",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-puba"
            },
            "tags_all": {
              "Name": "shyun-puba"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "shyun_pubc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:subnet/subnet-0938f9e1176671f6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0938f9e1176671f6e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-pubc"
            },
            "tags_all": {
              "Name": "shyun-pubc"
            },
            "vpc_id": "vpc-0c8a5b718268d76f5"
          },
          "dependencies": [
            "aws_vpc.shyun_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "shyun_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:733118693004:vpc/vpc-0c8a5b718268d76f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cc4e4342710953f",
            "default_route_table_id": "rtb-0b783f96d281d1f0a",
            "default_security_group_id": "sg-0bd1741493b5228c4",
            "dhcp_options_id": "dopt-03c8326d6d420cda2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c8a5b718268d76f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b783f96d281d1f0a",
            "owner_id": "733118693004",
            "tags": {
              "Name": "shyun-vpc"
            },
            "tags_all": {
              "Name": "shyun-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}